@@ -35,7 +35,7 @@ using GNU_gama::Index;
 namespace
 {
   class WriteAdjustedXML :
-    public GNU_gama::ObservationVisitor,
+    public GNU_gama::BaseVisitor,
     public GNU_gama::Visitor<Angle>,
     public GNU_gama::Visitor<Azimuth>,
     public GNU_gama::Visitor<Distance>,
