@@ -1,6 +1,12 @@
 next release 1.11
 #################
 
+2011-08-13  Ales Cepek  <cepek@biggy>
+
+	* class ObservationVisitor renamed to BaseVisitor (possible use of
+	abstract base visitor class in acyclic visitor pattern is not
+	limited to observations)
+
 2011-08-11  Ales Cepek  <cepek@biggy>
 
 	* added a new intermediate helper template class Accept (in
